# RPGengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: TargetSetWarningOptions.cmake
emscripten/include/emscripten/: emscripten.hpp
engine/: CMakeLists.txt
engine/include/rpg/: makeStatic.hpp  runGame.hpp
engine/include/rpg/math/: HQuat.hpp  Mat.hpp  Quat.hpp  Vec.hpp  Vec2.hpp  Vec3.hpp  abs.hpp  handedness.hpp  pi.hpp  radians.hpp  sqrt.hpp  trigonometric.hpp
engine/include/rpg/ren/: Material.hpp  RGBA8.hpp  Scene.hpp  mesh.hpp  resources.hpp  texture.hpp
engine/include/rpg/ren/wgp/: Backend.hpp  Buffer.hpp  StackBuffer.hpp  StackPoolAllocator.hpp  StackUniformBuffer.hpp
engine/src/: runGame.cpp
engine/src/ren/wgp/: Backend.cpp  Backend.hpp  BindGroup.hpp  Buffer.hpp  DepthFormat.hpp  LitRenderer.cpp  LitRenderer.hpp  MipMapCalculator.cpp  MipMapCalculator.hpp  Resources.cpp  Resources.hpp  SampleCount.hpp  Scene.hpp  ShaderModule.hpp  TextRenderer.cpp  TextRenderer.hpp  constmeshbuffer.hpp  getLimits.hpp  texture.hpp
engine/src/ren/wgp/mem/: AlignedBumpAllocator.hpp  BumpAllocatedBuffer.hpp
examples/: CMakeLists.txt
examples/webgpu/: .gitignore  CMakeLists.txt  README.md  main.cpp
include/RPGengine/: RPGengine.hpp  ecs.hpp
runtime/: CMakeLists.txt
runtime/include/rpg/: Runtime.hpp  runGame.hpp
runtime/include/rpg/ren/: mesh.hpp  texture.hpp
runtime/include/rpg/ren/wgp/: Backend.hpp  BindGroup.hpp  Buffer.hpp  StackBuffer.hpp  StackUniformBuffer.hpp  TextRenderer.hpp
runtime/src/: RPGengine.cpp  Runtime.cpp  runGame.cpp
runtime/src/ren/wgp/: Backend.cpp  BindGroup.hpp  TextRenderer.cpp
tools/: create_trigonometric_lookup.py  embed_file.py
web/: index.html
